chore: rename project name from  to

--- a/apps/docs/app/page.mdx
+++ b/apps/docs/app/page.mdx
@@ -1,8 +1,8 @@
 ---
-title: OpenAlgo Docs
+title: OpenDSA Docs
 ---
 
-Welcome to the OpenAlgo documentation.
+Welcome to the OpenDSA documentation.
 
 Use the sidebar to navigate.
 
