feat: setup and add documentation application

--- a/apps/docs/app/page.mdx
+++ b/apps/docs/app/page.mdx
@@ -1,8 +1,109 @@
 ---
-title: OpenDSA Docs
+title: Introduction
+description: Welcome to the OpenDSA documentation.
 ---
 
-Welcome to the OpenDSA documentation.
+# Introduction to OpenDSA
 
-Use the sidebar to navigate.
+> **See algorithms come to life**
 
+OpenDSA is an interactive visualization platform that helps you understand how algorithms and data structures work through step-by-step animations. Whether you're:
+
+- **Learning** algorithms for the first time
+- **Teaching** computer science concepts
+- **Preparing** for technical interviews
+- **Building** educational content
+
+OpenDSA makes complex algorithms visual and intuitive.
+
+## Features
+
+- **Interactive Visualizations** - Watch algorithms execute step-by-step with full control
+- **Multiple Categories** - Sorting, searching, graphs, trees, and more
+- **Code Highlighting** - See which line of code corresponds to each step
+- **Speed Control** - Slow down or speed up animations
+- **Shareable URLs** - Share specific visualization states with others
+- **Dark/Light Mode** - Easy on the eyes, day or night
+- **Keyboard Shortcuts** - Power-user friendly controls
+- **Open Source** - Free forever, community-driven
+
+## Visualizers
+
+### Sorting Algorithms
+- Bubble Sort
+- Selection Sort
+- Insertion Sort
+- Quick Sort
+- Merge Sort
+- *More coming soon...*
+
+### Searching Algorithms
+- Linear Search
+- Binary Search
+- *More coming soon...*
+
+### Data Structures
+- Arrays
+- *Linked Lists, Trees, Graphs coming soon...*
+
+## Quick Start
+
+### Try Online
+
+Visit [app.opendsa.dev](https://app.opendsa.dev.vercel.app) to start visualizing algorithms immediately - no installation required.
+
+### Run Locally
+
+```bash
+# Clone the repository
+git clone https://github.com/soloshun/opendsa.git
+cd opendsa
+
+# Install dependencies
+pnpm install
+
+# Start development server
+pnpm dev
+```
+
+Open [http://localhost:3000](http://localhost:3000) in your browser.
+
+## Tech Stack
+
+| Layer | Technology |
+|-------|------------|
+| Framework | [Next.js 14](https://nextjs.org/) (App Router) |
+| Language | [TypeScript](https://www.typescriptlang.org/) |
+| Styling | [TailwindCSS](https://tailwindcss.com/) + [shadcn/ui](https://ui.shadcn.com/) |
+| Animations | [Framer Motion](https://www.framer.com/motion/) + [D3.js](https://d3js.org/) |
+| State | [Zustand](https://zustand-demo.pmnd.rs/) |
+| Monorepo | [Turborepo](https://turbo.build/) |
+| Package Manager | [pnpm](https://pnpm.io/) |
+| Deployment | [Vercel](https://vercel.com/) |
+
+## Contributing
+
+We welcome contributions from everyone! Whether it's:
+
+- Adding new algorithm visualizers
+- Fixing bugs
+- Improving documentation
+- Suggesting features
+
+See our [Contributing Guide](/contributing) to get started.
+
+## Community
+
+- **Discord**: [Join our community ⛓️‍💥❌](https://discord.gg/opendsa)
+- **Twitter**: [@self.solo_shun⛓️‍💥❌](https://twitter.com/opendsa)
+- **GitHub Discussions**: [Ask questions](https://github.com/soloshun/opendsa/discussions)
+
+<br />
+<br />
+<p align="center" style={{marginBottom: "1rem"}}>Made with ❤️ by the Solo Shun for the OpenDSA community</p>
+
+<div align="center">
+  <a href="https://github.com/soloshun/opendsa/graphs/contributors">
+    <img src="https://contrib.rocks/image?repo=soloshun/opendsa" />
+  </a>
+</div>
