chore: refactor code to test for prod

--- a/apps/docs/app/page.mdx
+++ b/apps/docs/app/page.mdx
@@ -50,7 +50,7 @@ OpenDSA makes complex algorithms visual and intuitive.
 
 ### Try Online
 
-Visit [app.opendsa.dev](https://app.opendsa.dev.vercel.app) to start visualizing algorithms immediately - no installation required.
+Visit [app.opendsa.dev](https://app.opendsa.vercel.app) to start visualizing algorithms immediately - no installation required.
 
 ### Run Locally
 
@@ -94,8 +94,8 @@ See our [Contributing Guide](/contributing) to get started.
 
 ## Community
 
-- **Discord**: [Join our community ⛓️‍💥❌](https://discord.gg/opendsa)
-- **Twitter**: [@self.solo_shun⛓️‍💥❌](https://twitter.com/opendsa)
+- **Discord**: [Join our community](https://discord.gg/mfQvUa2y4r)
+- **Twitter**: [@self.solo_shun (currently not active)](#)
 - **GitHub Discussions**: [Ask questions](https://github.com/soloshun/opendsa/discussions)
 
 <br />
@@ -103,7 +103,7 @@ See our [Contributing Guide](/contributing) to get started.
 <p align="center" style={{marginBottom: "1rem"}}>Made with ❤️ by the Solo Shun for the OpenDSA community</p>
 
 <div align="center">
-  <a href="https://github.com/soloshun/opendsa/graphs/contributors">
+  <a href="https://github.com/soloshun/opendsa/">
     <img src="https://contrib.rocks/image?repo=soloshun/opendsa" />
   </a>
 </div>
