--- a/apps/docs/app/technical/algorithms/page.mdx
+++ b/apps/docs/app/technical/algorithms/page.mdx
@@ -1,4 +1,4 @@
-# Algorithms
+# Algorithms (Coming Soon)
 
 The current version of OpenDSA implements value-based algorithms to help users understand core computer science concepts.
 
