--- a/apps/docs/app/technical/data-structures/page.mdx
+++ b/apps/docs/app/technical/data-structures/page.mdx
@@ -1,4 +1,4 @@
-# Data Structures
+# Data Structures (Coming Soon)
 
 Core data structures implemented in OpenDSA with interactive visualizations.
 
