--- a/apps/docs/app/technical/page.mdx
+++ b/apps/docs/app/technical/page.mdx
@@ -1,4 +1,4 @@
-# Technical Documentation
+# Technical Documentation (Full Docs Coming Soon)
 
 Detailed documentation of the internal implementation of OpenDSA.
 
