--- a/apps/docs/app/technical/visualizers/architecture/page.mdx
+++ b/apps/docs/app/technical/visualizers/architecture/page.mdx
@@ -1,4 +1,4 @@
-# Visualizer Architecture
+# Visualizer Architecture (Full Docs Coming Soon)
 
 The core of OpenDSA is the extensible visualizer system.
 
