--- a/apps/docs/app/technical/visualizers/page.mdx
+++ b/apps/docs/app/technical/visualizers/page.mdx
@@ -1,4 +1,4 @@
-# Visualizers
+# Visualizers (Full Docs Coming Soon)
 
 The OpenDSA visualizer system powers all algorithm and data structure animations.
 
