--- a/apps/docs/app/technical/algorithms/bubble-sort/page.mdx
+++ b/apps/docs/app/technical/algorithms/bubble-sort/page.mdx
@@ -1,4 +1,4 @@
-# Bubble Sort
+# Bubble Sort (Coming Soon)
 
 Bubble Sort is the simplest sorting algorithm that works by repeatedly swapping the adjacent elements if they are in the wrong order.
 
