--- a/apps/docs/app/technical/algorithms/quick-sort/page.mdx
+++ b/apps/docs/app/technical/algorithms/quick-sort/page.mdx
@@ -1,4 +1,4 @@
-# Quick Sort
+# Quick Sort (Coming Soon)
 
 Quick Sort is an efficient, divide-and-conquer sorting algorithm. It works by selecting a 'pivot' element and partitioning the other elements into two sub-arrays according to whether they are less than or greater than the pivot.
 
