--- a/apps/docs/app/technical/data-structures/arrays/page.mdx
+++ b/apps/docs/app/technical/data-structures/arrays/page.mdx
@@ -1,4 +1,4 @@
-# Arrays
+# Arrays (Coming Soon)
 
 An array is a collection of items stored at contiguous memory locations. It is one of the simplest and most widely used data structures.
 
