chore(refactor): change app and docs url from  .opendsa.vercel.app to -opendsa.vercel.app

--- a/apps/docs/app/page.mdx
+++ b/apps/docs/app/page.mdx
@@ -50,7 +50,7 @@ OpenDSA makes complex algorithms visual and intuitive.
 
 ### Try Online
 
-Visit [app.opendsa.dev](https://app.opendsa.vercel.app) to start visualizing algorithms immediately - no installation required.
+Visit [app.opendsa.dev](https://app-opendsa.vercel.app) to start visualizing algorithms immediately - no installation required.
 
 ### Run Locally
 
